kube-all-components/pod-tt.yaml
apiVersion: v1
kind: Pod
metadata:
  name: our-pod
  labels:
    tier: app-tier
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
  restartPolicy: OnFailure
  # nodeName: kube-01
  tolerations:
    - key: "this"
      operator: "Equal"
      value: "value"
      effect: "NoSchedule"
    - key: "app01"
      operator: "Equal"
      value: "webapp01"
      effect: "NoExecute"
      tolerationSeconds: 45
