kube-all-components/svc-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-cip-service
  labels:
    type: my-cip-service
spec:
  type: ClusterIP
  selector:
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
