kube-all-components/exampleOnNetworkPolicy.yaml
# Create a network policy to allow traffic from the Internal application
# only to the payroll-service and db-service.
# Use the spec given below. You might want to enable ingress traffic
# to the pod to test your rules in the UI.
#
# Policy Name: internal-policy
# Policy Type: Egress
# Egress Allow: payroll
# Payroll Port: 8080
# Egress Allow: mysql
# MySQL Port: 3306

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
    - Egress
  egress:
# Engress info coming from the selected labels as below
# We are allowing Egress traffic that is coming from
#Internal pod to payroll and mysql db only using the matchlabels
    - to:
      - podSelector:
          matchLabels:
            name: payroll
      ports:
        - protocol: TCP
          port: 8080
    - to:
      - podSelector:
          matchLabels:
            name: mysql
      ports:
        - protocol: TCP
          port: 3306
