kube-all-components/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
  ingress:
    # Ingress info coming from the selected labels as below
    - from:
      - podSelector:
          matchLabels:
            role: frontend
            name: api-pod
  # Providing namespace info using matchlabels  
      - namespaceSelector:
          matchLabels:
            project: myproject
      ports:
      - protocol: TCP
        port: 3306
# Ingress info coming from the Ip addresses inside/outside the cluster
      - ipBlock:
          cidr: 172.17.0.0/16
          except:
            - 172.17.1.0/24

    ports:
      - protocol: TCP
        port: 6379
egress:
  - to:
      - ipBlock:
          cidr: 10.0.0.0/24
    ports:
      - protocol: TCP
        port: 5978
